@@ -141,7 +141,17 @@ block</td>
     timestamped JAR files in Java1.5+</td>
     <td valign="top" align="center">No</td>
   </tr>
-  
+  <tr>
+    <td valign="top">executable</td>
+    <td valign="top">Specify a particular <code>jarsigner</code> executable
+      to use in place of the default binary (found in the same JDK as
+      Ant is running in).<br/>
+      Must support the same command line options as the Sun JDK
+      jarsigner command.
+      <em>since Ant 1.8.0</em>.</td>
+    <td align="center" valign="top">all</td>
+    <td align="center" valign="top">No</td>
+  </tr>  
 </table>
 <h3>Parameters as nested elements</h3>
 <table border="1" cellpadding="2" cellspacing="0">
